# Tunny-Dashboard

./: .gitignore  LICENSE  README.md  README_ja.md  build.bat  dev.bat  format.bat
.github/workflows/: ci.yml
docs/design/proprietary-features/: architecture.md  dataflow.md  design-interview.md  interfaces.ts
docs/design/sobol-importance/: architecture.md  dataflow.md  design-interview.md  implementation-guide.md  interfaces.ts
docs/design/surface-plot-surrogate-models/: architecture.md  dataflow.md  design-interview.md  interfaces.ts
docs/design/tunny-dashboard/: architecture.md  dataflow.md  (+2 more)
docs/spec/: chart-catalog-requirements.md  chart-wiring-continuation-requirements.md  first_spec.md  layout-tabs-requirements.md  tunny-dashboard-requirements.md  ui-feature-gap-requirements.md  wasm-phase2-requirements.md
docs/tasks/: chart-catalog-tasks.md  chart-wiring-continuation-tasks.md  layout-tabs-tasks.md  tunny-dashboard-tasks.md  wasm-phase2-tasks.md
frontend/: .prettierignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/__mocks__/: echarts-for-react.tsx
frontend/e2e/: app.spec.ts  main-flow.spec.ts
frontend/src/: colormaps.ts  index.css
rust_core/: .gitignore  Cargo.toml
rust_core/src/: clustering.rs  dataframe.rs  export.rs  filter.rs  journal_parser.rs  kriging.rs  lib.rs  live_update.rs  pareto.rs  pdp.rs  rf.rs  sampling.rs  sensitivity.rs  topsis.rs
theory/: README.md  kriging.md  pdp.md  random-forest.md  ridge.md  sobol.md  spearman.md  topsis.md
(+206 files in other folders)
